ingress/ing-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-1
  annotations:
    networking.gke.io/managed-certificates: gcp-managed-cert-1
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: ingress-ip-1
spec:
  rules:
    - host: '<<DOMAIN>>'
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: airflow-web
                port:
                  number: 8080
